Story 2079. Fixed 'Browser' button in file input too large on Firefox.

--- a/caom2-search-server/src/main/resources/META-INF/resources/css/advanced_search.css
+++ b/caom2-search-server/src/main/resources/META-INF/resources/css/advanced_search.css
@@ -123,6 +123,11 @@ div.align-middle.column-picker-icon
   height: 22px;
 }
 
+.file-form-control
+{
+  height: auto;
+}
+
 /* Pager and Grid items. */
 .ui-icon
 {
